[build-system]
requires = [
  "setuptools>=61.0",
  "certifi>=14.05.14",
  "typer>=0.16",
  "inquirer>=3.4.0",
  "recodex-pylib>=0.2.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "recodex-cli"
version = "0.2.2"
authors = [
  { name="Vojtech Kloda", email="vojtech.kloda@gmail.com" },
  { name="Martin Kruliš", email="krulis@d3s.mff.cuni.cz"},
]
description = "CLI client for ReCodEx API implemented in Python based on recodex-pylib."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
  "setuptools>=61.0",
  "certifi>=14.05.14",
  "typer>=0.16",
  "inquirer>=3.4.0",
  "recodex-pylib>=0.2.2"
]

[project.scripts]
recodex = "recodex_cli.console:app"

[project.urls]
Homepage = "https://github.com/ReCodEx/cli"
Issues = "https://github.com/ReCodEx/cli/issues"

